Colab を使用して作成されました

--- a/makuatsu.ipynb
+++ b/makuatsu.ipynb
@@ -30,20 +30,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "086d4378-b6bc-4738-9a29-a3c1118bd370"
+        "outputId": "57a2a9d7-4afc-4729-b285-13c6dc4610b1"
       },
-      "execution_count": 55,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             ".config\n",
-            "240920-400rpm.csv\n",
-            "241002-1.csv\n",
-            "240930-1.csv\n",
-            "240930-2.csv\n",
-            "241002-2.csv\n",
             "sample_data\n"
           ]
         }
@@ -61,36 +56,43 @@
     {
       "cell_type": "code",
       "source": [
-        "file_name = \"240920-400rpm-air.csv\" # @param {type:\"string\"}\n",
+        "file_name = \"241030_60min.csv\" # @param {type:\"string\"}\n",
         "#t = -0.00 # @param {type:\"number\"}\n",
         "#0.4152\n",
         "df = pd.read_csv(\"/content/\"+file_name, encoding=encoding, skiprows=15)#\n",
-        "df = df.drop(df.columns[[0, -1]], axis=1)\n",
+        "df = df.drop(df.columns[[0, 0]], axis=1)\n",
         "#df = df - t\n",
         "\n",
         "m = df.median().median()#df[(df>=m-w)&(df<=m+w)] = m\n",
         "#df.to_csv(file_name+'(z).csv', index=False)\n",
-        "df = df - m"
+        "#df = df - m"
       ],
       "metadata": {
         "id": "0qRYJWbd6tl7"
       },
-      "execution_count": 61,
+      "execution_count": 23,
       "outputs": []
     },
     {
       "source": [
         "x = 0.04 # @param {type:\"number\"}\n",
-        "df[(df>=x)] = x\n",
-        "df[(df<=-x)] = -x##df = df.iloc[3:-2, 4:-4]df[0,0] = -x\n",
-        "dfu=df*1000\n",
+        "#df[(df>=x)] = x\n",
+        "#df[(df<=-x)] = -x##df = df.iloc[3:-2, 4:-4]df[0,0] = -x\n",
+        "#dfu=df*1000\n",
+        "\n",
+        "df[(df>=m+x)] = m+x\n",
+        "df[(df<=m-x)] = m-x\n",
         "color = \"RdBu\" # @param {type:\"string\"}\n",
-        "l = 16 # @param {type:\"number\"}\n",
+        "l = 36 # @param {type:\"number\"}\n",
         "cmap = plt.get_cmap(color)\n",
         "plt.figure(figsize=(5, 4))\n",
-        "plt.contourf(dfu.values,cmap=cmap,levels=l)\n",
+        "plt.contourf(df.values,cmap=cmap,levels=l)\n",
         "plt.colorbar(label='µm')#plt.axis('scaled')\n",
-        "plt.axis(\"off\")\n",
+        "#plt.axis(\"on\")\n",
+        "plt.xticks(np.arange(0, df.shape[1], 5))\n",
+        "plt.yticks(np.arange(0, df.shape[0], 5))\n",
+        "\n",
+        "#plt.grid()\n",
         "print(file_name+\".png\")\n",
         "print(m)\n",
         "plt.show()"
@@ -114,27 +116,39 @@
     {
       "cell_type": "code",
       "source": [
-        "w = 0.005\n",
-        "p = df.iloc[6:-6,9:-9][(df>=m-w)&(df<=m+w)].count().sum() /df.iloc[6:-6,9:-9].size\n",
+        "w = 0.003\n",
+        "p = df.iloc[6:-6,6:-6][(df>=-w)&(df<=w)].count().sum() /df.iloc[6:-6,6:-6].size\n",
+        "#p = df.iloc[6:-6,9:-9][(df>=-w)&(df<=w)].count().sum() /df.iloc[6:-6,9:-9].size\n",
         "print(p)"
       ],
       "metadata": {
         "id": "VUo9J1DNr3L1",
-        "outputId": "870645f9-0657-43d5-f280-b98270fb1b6e",
+        "outputId": "825e0b23-171e-4b41-9882-7f528b5c5f51",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.8263042799125273\n"
+            "0.5618492294877134\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.to_csv(file_name+'(z).csv', index=False)\n"
+      ],
+      "metadata": {
+        "id": "ThQhERCiHRgi"
+      },
+      "execution_count": 10,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
